# superuser

./: .gitignore  .gitmodules  pubspec.yaml  readme.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yaml
.github/workflows/: build.yml
superuser/: .gitignore  .pubignore  CHANGELOG.md  README.md  pubspec.yaml
superuser/example/: README.md  main.dart  pubspec.yaml
superuser/example/lib/: main.dart  style.dart
superuser/example/linux/: CMakeLists.txt  my_application.cc
superuser/lib/: instance.dart  mock.dart  superuser.dart
superuser_interfaces/: CHANGELOG.md  LICENSE  README.md  analysis_options.yaml  pubspec.yaml
superuser_interfaces/lib/: superuser_interfaces.dart
superuser_interfaces/test/: mock_interfaces_test.dart
superuser_plugin_unix/: .metadata  CHANGELOG.md  README.md  analysis_options.yaml  ffigen.yaml  pubspec.yaml
superuser_plugin_unix/lib/: superuser_plugin_unix.dart  superuser_plugin_unix_bindings_generated.dart
superuser_plugin_unix/linux/: CMakeLists.txt
superuser_plugin_unix/macos/: superuser_plugin_unix.podspec
superuser_plugin_unix/src/: CMakeLists.txt  superuser_plugin_unix.c  superuser_plugin_unix.h
superuser_plugin_windows/: .metadata  CHANGELOG.md  LICENSE  README.md  analysis_options.yaml  ffigen.yaml  pubspec.yaml
superuser_plugin_windows/lib/: superuser_plugin_windows.dart  superuser_plugin_windows_bindings_generated.dart
superuser_plugin_windows/src/: CMakeLists.txt  superuser_plugin_windows.c  superuser_plugin_windows.h
superuser_plugin_windows/windows/: CMakeLists.txt
(+20 files in other folders)
